@@ -1,3 +1,11 @@
+2004-03-11  Kevin Buettner  <kevinb@redhat.com>
+
+	* solist.h (master_so_list): New function.
+	* solib.c (master_so_list): Likewise.
+	* solib-svr4.c (enable_break): Iterate over so_list entries
+	obtained from master list instead of entries obtained directly
+	via svr4_current_sos().
+
 2004-03-10  Ben Elliston  <bje@gnu.org>
 
 	* MAINTAINERS: Update my mail address.
